fix(ui): change margin for currency shift component

--- a/src/app/ui/currencies/currency-shift/currency-shift.css
+++ b/src/app/ui/currencies/currency-shift/currency-shift.css
@@ -6,5 +6,5 @@
 
 .input-wrapper {
 	width: 20%;
-	margin: 0 1%;
+	margin-left: 2%;
 }
